--- a/user-guides/index.html
+++ b/user-guides/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scheduler App</title>
-  <style>
-    :root { font-family: sans-serif; }
-  </style>
-</head>
-<body>
-  <h1>Scheduler App</h1>
-  <p><a href="docs/">Systems documentation</a></p>
-  <p><a href="guides">User guides</a></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scheduler App</title>
+    <style>
+      :root {
+        font-family: sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Scheduler App</h1>
+    <p><a href="docs/">Systems documentation</a></p>
+    <p><a href="guides">User guides</a></p>
+  </body>
 </html>
